temp/objects/Vehicle__c.object
<CustomObject>
    <fields>
        <fullName>Current_Milage__c</fullName>
        <label>Current Milage</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Driver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Driver</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.Phone</field>
                <operation>equals</operation>
                <valueField>Contact.Phone</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Vehicles (Driver)</relationshipLabel>
        <relationshipName>Drivers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Maintenance_Date__c</fullName>
        <label>Last Maintenance Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Manager</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Vehicles</relationshipLabel>
        <relationshipName>Vehicles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Next_Maintenance_Date__c</fullName>
        <label>Next Maintenance Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Plate_Number__c</fullName>
        <description>Vehicle&apos;s VIN number</description>
        <label>Plate Number</label>
        <length>17</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Available</fullName>
                </value>
                <value>
                    <fullName>Not Available</fullName>
                </value>
                <value>
                    <fullName>At Service</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vehicle_Model__c</fullName>
        <label>Vehicle Model</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_Type__c</fullName>
        <label>Vehicle Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Van</fullName>
                    <default>true</default>
                    <label>Van</label>
                </value>
                <value>
                    <fullName>Truck</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vehicle_Year__c</fullName>
        <description>Production year</description>
        <label>Vehicle Year</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Weight__c</fullName>
        <inlineHelpText>Chose a Truck waight</inlineHelpText>
        <label>Weight</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1.5 - 2.0 tons</fullName>
                    <default>true</default>
                    <label>1.5 - 2.0 tons</label>
                </value>
                <value>
                    <fullName>2.1 - 3.5 tons</fullName>
                </value>
                <value>
                    <fullName>3.5 - 7.0 tons</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Vehicle</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Last_Maintenance_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Vehicle license plate</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vehicles</pluralLabel>
    <recordTypes>
        <fullName>Truck</fullName>
        <active>true</active>
        <label>Truck</label>
    </recordTypes>
    <recordTypes>
        <fullName>Van</fullName>
        <active>true</active>
        <label>Van</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Next_Maintenance_Date_check</fullName>
        <active>true</active>
        <description>Next Maintenance Date must be later than Last Maintenance Date</description>
        <errorConditionFormula>Next_Maintenance_Date__c  &lt;= Last_Maintenance_Date__c</errorConditionFormula>
        <errorDisplayField>Next_Maintenance_Date__c</errorDisplayField>
        <errorMessage>Next Maintenance Date must be later than Last Maintenance Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Plate_number_contain_or_starts_with_TX</fullName>
        <active>true</active>
        <description>Plate number should contain or start with &quot;TX&quot;</description>
        <errorConditionFormula>OR(
AND(
NOT(CONTAINS( Plate_Number__c , &quot;TX&quot;))
),

AND(
NOT(BEGINS(Plate_Number__c, &quot;TX&quot;))
)
)</errorConditionFormula>
        <errorDisplayField>Plate_Number__c</errorDisplayField>
        <errorMessage>Plate number should contain or start with &quot;TX&quot;</errorMessage>
    </validationRules>
</CustomObject>